add resume link and add body text and backgoruond color

--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@
 .navbartext{
     color:rgb(224, 211, 211)
 }
+.itag{
+    font-family: cursive;
+    font-size: larger;
+}
+.introbodybgcolor{
+    background-color: silver;
+}
